<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">xSocks</string>
    <string name="screen_name">xSocks</string>

    <string name="version" translatable="false">Version %1$s (%2$d)</string>

    <!-- function category -->
    <string name="function_cat">Service Controller</string>
    <string name="service_controller">Proxy Switch</string>
    <string name="service_summary">Enable / Disable Proxy</string>

    <!-- proxy category -->
    <string name="proxy_cat">Server Settings</string>
    <string name="profile">Profile</string>
    <string name="profile_summary">Profile name</string>
    <string name="proxy">Server</string>
    <string name="proxy_summary">Hostname or IP of the remote server</string>
    <string name="remote_port">Remote Port</string>
    <string name="remote_port_summary">Port number of the remote server</string>
    <string name="port">Local Port</string>
    <string name="port_summary">Port number of the local server</string>
    <string name="sitekey">Password</string>
    <string name="sitekey_summary">Password of the remote server</string>

    <!-- feature category -->
    <string name="feature_cat">Feature Settings</string>
    <string name="route_list">Route</string>
    <string name="route_list_summary">Bypass IP addresses in the route list</string>
    <string name="auto_set_proxy">Global Proxy</string>
    <string name="auto_set_proxy_summary">Set up system-wide proxy</string>
    <string name="proxied_apps">Per-App Proxy</string>
    <string name="proxied_apps_summary">Set proxy for selected apps</string>
    <string name="proxied_help">Per-App Proxy</string>
    <string name="bypass_apps">Bypass Mode</string>
    <string name="bypass_apps_summary">Enable this option to bypass selected apps</string>
    <string name="auto_connect">Auto Connect</string>
    <string name="auto_connect_summary">Enable xSocks on startup</string>
    <string name="udp_dns">UDP Forwarding</string>
    <string name="udp_dns_summary">Forward UDP packets to remote server</string>

    <!-- notification category -->
    <string name="forward_success">xSocks started.</string>
    <string name="service_running">Connected to "%s"</string>
    <string name="service_status" formatted="false">Current Rate: %d KB/s</string>
    <string name="forward_fail">xSocks failed to start.</string>
    <string name="service_stopped">xSocks stopped.</string>
    <string name="forward_stop">xSocks stopped.</string>
    <string name="service_failed">Failed to connect the remote server</string>
    <string name="stop">Stop the service</string>
    <string name="stopping">Shutting down…</string>
    <string name="vpn_error">%s</string>
    <string name="error">ERROR</string>

    <!-- alert category -->
    <string name="port_alert">The local port number should be greater than 1024</string>
    <string name="port_empty">Port should not be empty</string>
    <string name="proxy_empty">Proxy should not be empty</string>
    <string name="password_empty">Password should not be empty</string>
    <string name="crash_alert">An unexpected exit detected, the context has been reset.</string>
    <string name="connecting">Connecting…</string>
    <string name="initializing">Initializing…</string>
    <string name="recovering">Resetting…</string>
    <string name="loading">Loading…</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="remove_profile">Remove this profile \"%s\"?</string>

    <!-- menu category -->
    <string name="profiles">Profiles</string>
    <string name="settings">Settings</string>
    <string name="recovery">Reset</string>
    <string name="about">About</string>
    <string name="about_title">xSocks %s</string>
    <string name="add_profile">Add Profile</string>
    <string name="version_default">Version 1.0.0 (100)</string>
    <string name="title_activity_app_manager">AppManagerActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

</resources>
